[package]
name        = "siphon-ai-cdr"
description = "Call Detail Record schema, file sink, and webhook sink."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[dependencies]
tokio.workspace       = true
async-trait.workspace = true
serde.workspace       = true
serde_json.workspace  = true
chrono.workspace      = true
uuid.workspace        = true
thiserror.workspace   = true
tracing.workspace     = true
# Internal — shared retrying JSON-POST transport behind the webhook sink.
siphon-ai-http.workspace = true
# HEP3 emission target for `HepCdrSink`. Optional dep so deployments
# that don't want HEP shipping don't pull `hep-rs` + tokio sub-deps.
hep-rs.workspace      = true

[dev-dependencies]
tempfile = "3"
