[package]
name        = "siphon-ai-core"
description = "CallController, call state machine, and per-call orchestration."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[dependencies]
anyhow.workspace      = true
tokio.workspace       = true
async-trait.workspace = true
thiserror.workspace   = true
tracing.workspace     = true
uuid.workspace        = true
chrono.workspace      = true
parking_lot.workspace = true
metrics.workspace     = true

# Internal crates
siphon-ai-bridge.workspace     = true
siphon-ai-cdr.workspace        = true
siphon-ai-media-glue.workspace = true
siphon-ai-routes.workspace     = true
siphon-ai-sip-glue.workspace   = true
siphon-ai-telemetry.workspace  = true
siphon-ai-webhooks.workspace   = true

# Upstream — siphon-rs (Request, Response) for the CallAcceptor impl.
sip-core.workspace        = true
sip-dialog.workspace      = true
sip-uac.workspace         = true
sip-uas.workspace         = true
sip-transaction.workspace = true

# Upstream — forge for constructing CallId/ParticipantId in the acceptor;
# media-glue owns the session/bridge logic so we only need the type stubs.
forge-core.workspace   = true
forge-engine.workspace = true
# Re-INVITE handling re-parses the inbound offer to read its
# direction attribute. forge-sdp re-exports the sip-sdp types we
# need (`SessionDescription`, `MediaType`, `Direction`).
forge-sdp.workspace    = true
# DtlsCertificate for DTLS-SRTP. The `dtls` feature on forge-rtp
# rides in transitively via forge-engine's `dtls` feature (cargo
# unifies — we don't need to spell it out here).
forge-rtp.workspace    = true

[dev-dependencies]
bytes.workspace                       = true
tokio-tungstenite.workspace           = true
futures.workspace                     = true
serde_json.workspace                  = true
forge-rtp.workspace                   = true
metrics-exporter-prometheus.workspace = true
async-trait.workspace                 = true
