[package]
name        = "siphon-ai-http"
description = "Retrying JSON-over-HTTP POST delivery shared by SiphonAI's CDR and lifecycle webhook sinks."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[dependencies]
tokio.workspace      = true
reqwest.workspace    = true
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
tracing.workspace    = true
# Delivery observability — increments via the `metrics` facade using
# the `siphon_ai_*` names registered in `siphon-ai-telemetry`.
metrics.workspace    = true
# HMAC-SHA256 request signing (`X-SiphonAI-Signature`) + a per-event
# idempotency id.
hmac.workspace       = true
sha2.workspace       = true
uuid.workspace       = true

[dev-dependencies]
hyper.workspace          = true
hyper-util.workspace     = true
http-body-util.workspace = true
tempfile                 = "3"
