[package]
name        = "siphon-ai-media-glue"
description = "Adapter from forge-engine media sessions to the SiphonAI bridge (the audio tap)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[dependencies]
tokio.workspace       = true
bytes.workspace       = true
async-trait.workspace = true
thiserror.workspace   = true
tracing.workspace     = true
uuid.workspace        = true
metrics.workspace     = true

# Sibling SiphonAI crates
siphon-ai-bridge.workspace = true
siphon-ai-recording.workspace = true

# Upstream media stack
forge-core.workspace   = true
forge-rtp.workspace    = true
forge-engine.workspace = true
forge-codecs.workspace = true
forge-sdp.workspace    = true
forge-dtmf.workspace   = true
# Conference rooms (0.7.0 chunk 1): mixer + tone generation.
forge-mixer.workspace     = true
forge-injection.workspace = true

[dev-dependencies]
# `chrono` is in our forge_core::ForgeEvent::DtmfDigitDetected
# `timestamp` field, used in tests that publish synthesised events.
chrono.workspace = true
# `test-util` is required for `#[tokio::test(start_paused = true)]`
# and `tokio::time::advance` — used in the inactivity-watchdog test.
# `"full"` (the workspace default) deliberately omits this feature.
tokio = { workspace = true, features = ["test-util"] }
