[package]
name        = "siphon-ai-recording"
description = "Per-call audio recording: stereo WAV writer fed off the media tap, off the audio hot path."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[dependencies]
tokio     = { workspace = true }
tracing.workspace   = true
thiserror.workspace = true
aes-gcm.workspace   = true
zeroize.workspace   = true
siphon-ai-http.workspace = true
ogg.workspace       = true
audiopus.workspace  = true

[dev-dependencies]
tokio = { workspace = true }
