[package]
name        = "siphon-ai-routes"
description = "Route matching engine: TOML dialplan -> bridge config selection."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[dependencies]
serde      = { workspace = true, features = ["derive"] }
toml.workspace       = true
regex.workspace      = true
thiserror.workspace  = true
tracing.workspace    = true
# For the per-route `[route.bridge.tls]` override: the compiled
# `BridgeTlsConfig` lives on `CompiledRoute` so it swaps atomically with
# the route table on SIGHUP reload (rather than in a separate non-reloaded
# map). Internal workspace edge only — no new external crate, no cycle
# (bridge does not depend on routes).
siphon-ai-bridge.workspace = true
