[package]
name        = "siphon-ai-security"
description = "Call-authentication types: STIR/SHAKEN verstat, attestation policy, trust-anchor config."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[dependencies]
serde      = { workspace = true, features = ["derive"] }
thiserror.workspace  = true

[dev-dependencies]
serde_json.workspace = true
