[package]
name        = "siphon-ai-sip-glue"
description = "Adapter from siphon-rs UAS/UAC dialog events to the SiphonAI core state machine."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[dependencies]
anyhow.workspace      = true
tokio.workspace       = true
async-trait.workspace = true
thiserror.workspace   = true
tracing.workspace     = true
chrono.workspace      = true
parking_lot.workspace = true
# Inbound digest-auth metric (siphon_ai_sip_auth_total).
metrics.workspace     = true
# Hot-swappable route table for SIGHUP config reload (0.12.0).
arc-swap = "1"

# Internal
siphon-ai-audit.workspace  = true
siphon-ai-routes.workspace = true

# Upstream SIP stack
sip-core.workspace        = true
sip-parse.workspace       = true
sip-transport.workspace   = true
sip-transaction.workspace = true
sip-dialog.workspace      = true
sip-uas.workspace         = true
sip-uac.workspace         = true
sip-auth.workspace        = true

[dev-dependencies]
bytes = { workspace = true }
parking_lot = { workspace = true }
# Digest round-trip tests compute the client response hash.
sha2 = { workspace = true }
