[package]
name        = "siphon-ai-telemetry"
description = "Tracing, Prometheus metrics, HEP wiring, and admin/health endpoints."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[dependencies]
anyhow.workspace                      = true
tokio.workspace                       = true
tracing.workspace                     = true
tracing-subscriber.workspace          = true
metrics.workspace                     = true
metrics-exporter-prometheus.workspace = true
hyper.workspace                       = true
hyper-util.workspace                  = true
http-body-util.workspace              = true
serde.workspace                       = true
serde_json.workspace                  = true
thiserror.workspace                   = true
# Signed audit-event stream (0.20.0): admin requests emit AuditEvents.
# Only depends on siphon-ai-http, so no dep cycle.
siphon-ai-audit.workspace             = true
# Admin bearer-token auth: SHA-256 the token + constant-time compare.
sha2.workspace                        = true
subtle.workspace                      = true
# Optional server-side TLS for the admin listener ([admin.tls]). The
# cert/key are loaded (and SIGHUP-reloaded) by the daemon, which hands
# us the live `ServerConfig`; we only build a `TlsAcceptor` per accept.
tokio-rustls.workspace                = true

# HEP3 / Homer shipping. Owned by us (github.com/thevoiceguy/hep-rs +
# the sip-hep / forge-hep adapter crates). Telemetry assembles the
# UdpHepSink at startup, installs the per-protocol emitters, and
# exposes a small SIPHON-AI-owned API for log / CDR HEP chunks.
# `siphon-ai-config` is intentionally NOT a dep here (it would close
# a cycle through siphon-ai-core); `HepTelemetry::build` takes
# primitives so the runtime can do the destructure.
hep-rs       = { workspace = true }
sip-hep      = { workspace = true }
forge-hep    = { workspace = true }
opentelemetry = "0.32.0"
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["grpc-tonic", "trace"] }
# W3C trace propagation to the WS server (0.23.0): reads the OTel span
# context off the *current tracing span* so core can stamp
# `traceparent`/`tracestate` onto the WS upgrade. Same version pairing
# as the daemon binary's OTLP layer.
tracing-opentelemetry = "0.33.0"

[dev-dependencies]
hyper-util = { workspace = true, features = ["client", "client-legacy", "http1"] }
