[package]
name        = "siphon-ai-webhooks"
description = "Out-of-band lifecycle webhooks (HTTP POST with HMAC signing)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[dependencies]
tokio.workspace      = true
serde.workspace      = true
serde_json.workspace = true
reqwest.workspace    = true
hmac.workspace       = true
sha2.workspace       = true
base64.workspace     = true
chrono.workspace     = true
thiserror.workspace  = true
tracing.workspace    = true
