[package]
name        = "siphon-ai-webhooks"
description = "Out-of-band lifecycle webhooks (HTTP POST with HMAC signing)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[dependencies]
tokio.workspace       = true
async-trait.workspace = true
serde.workspace       = true
chrono.workspace      = true
thiserror.workspace   = true
tracing.workspace     = true
# Internal — shared retrying JSON-POST transport behind the HTTP sink.
siphon-ai-http.workspace = true

# v1 doesn't ship HMAC signing — left as a follow-up per docs/DEV_PLAN.md
# §11.6 ("Lifecycle Webhooks"). Re-enable hmac/sha2/base64 when that lands.

[dev-dependencies]
serde_json.workspace  = true
parking_lot.workspace = true
