[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "siphon-ai-server"
version = "0.28.0"
description = "Server SDK for the SiphonAI WebSocket bridge protocol v1: typed events, 20 ms audio framing, and connection lifecycle — write handlers, not wire code."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
keywords = ["siphon-ai", "sip", "voice", "websocket", "telephony"]
dependencies = [
    "websockets>=13",
]

[project.urls]
Homepage = "https://github.com/thevoiceguy/siphon-ai"
Documentation = "https://github.com/thevoiceguy/siphon-ai/blob/main/docs/PROTOCOL.md"

[project.optional-dependencies]
test = ["jsonschema>=4"]

[tool.hatch.build.targets.wheel]
packages = ["src/siphon_ai_server"]
